--- a/DemoApp/src/app/routing-module/graph/graph.component.html
+++ b/DemoApp/src/app/routing-module/graph/graph.component.html
@@ -29,5 +29,5 @@
   </nav>
   
 <div class="image">
-    <img src="assets/sales.png" alt="Image Not Found">
+    <img src="../../../assets/plot.jpg" alt="Image Not Found">
 </div>
