--- a/DemoApp/src/app/routing-module/result/result.component.html
+++ b/DemoApp/src/app/routing-module/result/result.component.html
@@ -29,5 +29,5 @@
 </nav>
   
 <div class="image">
-  <img src="DemoApp\src\assets\plot.jpg" alt="Load CSV to Show Image">
+  <img src="../../../assets/plot.jpg" alt="Load CSV to Show Image">
 </div>
